# ProvablyGoodPlanarMappings

./: ProvablyGoodPlanarMappings.md  README.md  flake.nix
v1/: README.md  flake.nix  refactored2.py  ui-for-refactored2.py
v2/: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
v2/bevy_image_deform/: API_DESIGN_CORRECTED.md  ARCHITECTURE.md  COLLOCATION_POINTS_ANALYSIS.md  COMMUNICATION_PROTOCOL.md  CURRENT_STRATEGY_STATUS.md  Cargo.toml  GPU.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_COMPLETE.md  STRATEGY1_SWITCH_COMPLETE.md  STRATEGY_MIGRATION_ANALYSIS.md  test_k_auto.py
v2/bevy_image_deform/assets/shaders/: deform.wgsl
v2/bevy_image_deform/scripts/: STRATEGY_USAGE.md  bevy_bridge.py  deform_algo.py  implementation-plan.md  provably-good-planar-mappings.md  refactoring-v2.md  test_phase1.py
v2/bevy_image_deform/src/: lib.rs  main.rs  state.rs
v2/bevy_image_deform/src/image/: contour.rs  loader.rs  mod.rs
v2/bevy_image_deform/src/input/: handler.rs  mod.rs
v2/bevy_image_deform/src/python/: bridge.rs  commands.rs  mod.rs
v2/bevy_image_deform/src/rendering/: deform.rs  material.rs  mesh.rs  mod.rs
v2/bevy_image_deform/src/ui/: debug_viz.rs  mod.rs  text.rs
v2/crates/bevy-pgpm/: Cargo.toml
v2/crates/bevy-pgpm/src/: input.rs  lib.rs  lifecycle.rs  main.rs
v2/crates/bevy-pgpm/src/domain/: coords.rs  image_loader.rs  mod.rs  rbf.rs
v2/crates/bevy-pgpm/src/rendering/: cpu_deform.rs  export.rs  mesh.rs  mod.rs
v2/crates/bevy-pgpm/src/state/: algorithm.rs  display_info.rs  image_info.rs  interaction.rs  mod.rs  params.rs
v2/crates/bevy-pgpm/src/ui/: actions.rs  display.rs  gizmos.rs  markers.rs  mod.rs  panel.rs
v2/crates/pgpm-core/src/: distortion.rs  lib.rs
v2/crates/pgpm-core/src/algorithm/: active_set.rs  mod.rs  runner.rs  strategy.rs
v2/crates/pgpm-core/src/basis/: gaussian.rs  mod.rs  shape_aware_gaussian.rs
v2/crates/pgpm-core/src/mapping/: bridge.rs  mod.rs  pgpm_algorithm.rs  planar_mapping.rs
v2/crates/pgpm-core/tests/: integration_verify.rs  shape_aware_test.rs
v3/: .gitignore  CLAUDE.md  DESIGN.md  flake.nix
v3/crates/bevy-pgpm/: Cargo.toml
v3/crates/bevy-pgpm/assets/shaders/: deform.wgsl
v3/crates/bevy-pgpm/src/: deform.rs  image.rs  input.rs  lib.rs  lifecycle.rs  main.rs  state.rs  ui.rs
v3/crates/bevy-pgpm/src/domain/: image_loader.rs
v3/crates/bevy-pgpm/src/rendering/: cpu_deform.rs  gpu_deform.rs  material.rs  mesh.rs  mod.rs
v3/crates/bevy-pgpm/src/state/: algorithm.rs  display_info.rs  image_info.rs  mod.rs  params.rs
v3/crates/bevy-pgpm/src/ui/: actions.rs  display.rs  markers.rs  mod.rs  panel.rs
v3/crates/pgpm-core/: Cargo.toml
v3/crates/pgpm-core/src/: active_set.rs  algorithm.rs  basis.rs  bridge.rs  concrete.rs  distortion.rs  distortion_policy.rs  geodesic.rs  lib.rs  mapping.rs  regularization.rs  solver.rs  strategy.rs  types.rs
v3/crates/pgpm-core/tests/: integration_test.rs  integration_verify.rs  shape_aware_test.rs
v3/docs/: PHASE2_HANDOFF.md
(+18 files in other folders)
