[package]
name = "bevy_image_deform"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    # レンダリング基盤
    "bevy_asset",
    "bevy_winit",         # ウィンドウ管理 + 入力処理を含む
    "bevy_core_pipeline",
    "bevy_render",
    
    # 2D
    "bevy_sprite",
    "bevy_gizmos",
    
    # UI
    "bevy_ui",
    "bevy_text",
    
    # ステート管理
    "bevy_state",
    
    # 画像フォーマット
    "png",
    
    # システム
    "multi_threaded",
    
    # Linux用（必要に応じて）
    "x11",
    "wayland",
] }
bevy_egui = "0.32"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
crossbeam-channel = "0.5"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
image = "0.25"

# 最適化設定
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
