[package]
name = "bevy-pgpm"
version = "0.1.0"
edition = "2021"
description = "Interactive deformation UI for Provably Good Planar Mappings"

[dependencies]
pgpm-core = { path = "../pgpm-core" }
log = "0.4"
nalgebra = "0.33"

bevy = { version = "0.18", default-features = false, features = [
    # Core
    "bevy_asset",
    "bevy_winit",
    "bevy_state",
    "bevy_image",
    # Rendering pipeline
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_camera",
    "bevy_shader",
    # 2D rendering (bevy_sprite_render includes bevy_sprite)
    "bevy_sprite_render",
    # Gizmos rendering (bevy_gizmos_render includes bevy_gizmos)
    "bevy_gizmos_render",
    # UI rendering (bevy_ui_render includes bevy_ui)
    "bevy_ui_render",
    "bevy_text",
    # Platform
    "default_font",
    "png",
    "multi_threaded",
    "x11",
    "wayland",
] }

image = "0.25"
imageproc = "0.25"
geo = "0.28"
rfd = "0.15"
delaunator = "1.0.2"
